; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_lwp_messages.c___lwpmq_seize.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_lwp_messages.c___lwpmq_seize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_20__ = type { %struct.TYPE_17__ }
%struct.TYPE_17__ = type { i32, i8*, i32, i8*, i32*, i32 }
%struct.TYPE_18__ = type { i32, i32 }
%struct.TYPE_19__ = type { i32, %struct.TYPE_16__ }
%struct.TYPE_16__ = type { i32, i8* }

@_thr_executing = common dso_local global %struct.TYPE_20__* null, align 8
@LWP_MQ_STATUS_SUCCESSFUL = common dso_local global i32 0, align 4
@LWP_MQ_STATUS_UNSATISFIED_NOWAIT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__lwpmq_seize(%struct.TYPE_18__* %0, i32 %1, i8* %2, i32* %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_18__*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca %struct.TYPE_19__*, align 8
  %16 = alloca %struct.TYPE_20__*, align 8
  %17 = alloca %struct.TYPE_20__*, align 8
  store %struct.TYPE_18__* %0, %struct.TYPE_18__** %8, align 8
  store i32 %1, i32* %9, align 4
  store i8* %2, i8** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %18 = load %struct.TYPE_20__*, %struct.TYPE_20__** @_thr_executing, align 8
  store %struct.TYPE_20__* %18, %struct.TYPE_20__** %16, align 8
  %19 = load i32, i32* @LWP_MQ_STATUS_SUCCESSFUL, align 4
  %20 = load %struct.TYPE_20__*, %struct.TYPE_20__** %16, align 8
  %21 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %21, i32 0, i32 0
  store i32 %19, i32* %22, align 8
  %23 = load i32, i32* %14, align 4
  %24 = call i32 @_CPU_ISR_Disable(i32 %23)
  %25 = load %struct.TYPE_18__*, %struct.TYPE_18__** %8, align 8
  %26 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %102

29:                                               ; preds = %6
  %30 = load %struct.TYPE_18__*, %struct.TYPE_18__** %8, align 8
  %31 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = add nsw i32 %32, -1
  store i32 %33, i32* %31, align 4
  %34 = load %struct.TYPE_18__*, %struct.TYPE_18__** %8, align 8
  %35 = call %struct.TYPE_19__* @__lwpmq_get_pendingmsg(%struct.TYPE_18__* %34)
  store %struct.TYPE_19__* %35, %struct.TYPE_19__** %15, align 8
  %36 = load i32, i32* %14, align 4
  %37 = call i32 @_CPU_ISR_Restore(i32 %36)
  %38 = load %struct.TYPE_19__*, %struct.TYPE_19__** %15, align 8
  %39 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %38, i32 0, i32 1
  %40 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = load i32*, i32** %11, align 8
  store i32 %41, i32* %42, align 4
  %43 = load %struct.TYPE_19__*, %struct.TYPE_19__** %15, align 8
  %44 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 8
  %46 = load %struct.TYPE_20__*, %struct.TYPE_20__** %16, align 8
  %47 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %46, i32 0, i32 0
  %48 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %47, i32 0, i32 5
  store i32 %45, i32* %48, align 8
  %49 = load i8*, i8** %10, align 8
  %50 = load %struct.TYPE_19__*, %struct.TYPE_19__** %15, align 8
  %51 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %50, i32 0, i32 1
  %52 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %51, i32 0, i32 1
  %53 = load i8*, i8** %52, align 8
  %54 = load i32*, i32** %11, align 8
  %55 = load i32, i32* %54, align 4
  %56 = call i32 @__lwpmq_buffer_copy(i8* %49, i8* %53, i32 %55)
  %57 = load %struct.TYPE_18__*, %struct.TYPE_18__** %8, align 8
  %58 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %57, i32 0, i32 1
  %59 = call %struct.TYPE_20__* @__lwp_threadqueue_dequeue(i32* %58)
  store %struct.TYPE_20__* %59, %struct.TYPE_20__** %17, align 8
  %60 = load %struct.TYPE_20__*, %struct.TYPE_20__** %17, align 8
  %61 = icmp ne %struct.TYPE_20__* %60, null
  br i1 %61, label %67, label %62

62:                                               ; preds = %29
  %63 = load %struct.TYPE_18__*, %struct.TYPE_18__** %8, align 8
  %64 = load %struct.TYPE_19__*, %struct.TYPE_19__** %15, align 8
  %65 = call i32 @__lwpmq_free_msg(%struct.TYPE_18__* %63, %struct.TYPE_19__* %64)
  %66 = load i32, i32* @LWP_MQ_STATUS_SUCCESSFUL, align 4
  store i32 %66, i32* %7, align 4
  br label %142

67:                                               ; preds = %29
  %68 = load %struct.TYPE_20__*, %struct.TYPE_20__** %17, align 8
  %69 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %68, i32 0, i32 0
  %70 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %69, i32 0, i32 5
  %71 = load i32, i32* %70, align 8
  %72 = load %struct.TYPE_19__*, %struct.TYPE_19__** %15, align 8
  %73 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %72, i32 0, i32 0
  store i32 %71, i32* %73, align 8
  %74 = load %struct.TYPE_20__*, %struct.TYPE_20__** %17, align 8
  %75 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %74, i32 0, i32 0
  %76 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %75, i32 0, i32 3
  %77 = load i8*, i8** %76, align 8
  %78 = ptrtoint i8* %77 to i32
  %79 = load %struct.TYPE_19__*, %struct.TYPE_19__** %15, align 8
  %80 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %79, i32 0, i32 1
  %81 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %80, i32 0, i32 0
  store i32 %78, i32* %81, align 8
  %82 = load %struct.TYPE_19__*, %struct.TYPE_19__** %15, align 8
  %83 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %82, i32 0, i32 1
  %84 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %83, i32 0, i32 1
  %85 = load i8*, i8** %84, align 8
  %86 = load %struct.TYPE_20__*, %struct.TYPE_20__** %17, align 8
  %87 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %86, i32 0, i32 0
  %88 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %87, i32 0, i32 1
  %89 = load i8*, i8** %88, align 8
  %90 = load %struct.TYPE_19__*, %struct.TYPE_19__** %15, align 8
  %91 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %90, i32 0, i32 1
  %92 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %91, i32 0, i32 0
  %93 = load i32, i32* %92, align 8
  %94 = call i32 @__lwpmq_buffer_copy(i8* %85, i8* %89, i32 %93)
  %95 = load %struct.TYPE_18__*, %struct.TYPE_18__** %8, align 8
  %96 = load %struct.TYPE_19__*, %struct.TYPE_19__** %15, align 8
  %97 = load %struct.TYPE_19__*, %struct.TYPE_19__** %15, align 8
  %98 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %97, i32 0, i32 0
  %99 = load i32, i32* %98, align 8
  %100 = call i32 @__lwpmq_msg_insert(%struct.TYPE_18__* %95, %struct.TYPE_19__* %96, i32 %99)
  %101 = load i32, i32* @LWP_MQ_STATUS_SUCCESSFUL, align 4
  store i32 %101, i32* %7, align 4
  br label %142

102:                                              ; preds = %6
  %103 = load i32, i32* %12, align 4
  %104 = icmp ne i32 %103, 0
  br i1 %104, label %113, label %105

105:                                              ; preds = %102
  %106 = load i32, i32* %14, align 4
  %107 = call i32 @_CPU_ISR_Restore(i32 %106)
  %108 = load i32, i32* @LWP_MQ_STATUS_UNSATISFIED_NOWAIT, align 4
  %109 = load %struct.TYPE_20__*, %struct.TYPE_20__** %16, align 8
  %110 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %109, i32 0, i32 0
  %111 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %110, i32 0, i32 0
  store i32 %108, i32* %111, align 8
  %112 = load i32, i32* @LWP_MQ_STATUS_UNSATISFIED_NOWAIT, align 4
  store i32 %112, i32* %7, align 4
  br label %142

113:                                              ; preds = %102
  %114 = load %struct.TYPE_18__*, %struct.TYPE_18__** %8, align 8
  %115 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %114, i32 0, i32 1
  %116 = call i32 @__lwp_threadqueue_csenter(i32* %115)
  %117 = load %struct.TYPE_18__*, %struct.TYPE_18__** %8, align 8
  %118 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %117, i32 0, i32 1
  %119 = load %struct.TYPE_20__*, %struct.TYPE_20__** %16, align 8
  %120 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %119, i32 0, i32 0
  %121 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %120, i32 0, i32 4
  store i32* %118, i32** %121, align 8
  %122 = load i32, i32* %9, align 4
  %123 = load %struct.TYPE_20__*, %struct.TYPE_20__** %16, align 8
  %124 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %123, i32 0, i32 0
  %125 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %124, i32 0, i32 2
  store i32 %122, i32* %125, align 8
  %126 = load i8*, i8** %10, align 8
  %127 = load %struct.TYPE_20__*, %struct.TYPE_20__** %16, align 8
  %128 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %127, i32 0, i32 0
  %129 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %128, i32 0, i32 1
  store i8* %126, i8** %129, align 8
  %130 = load i32*, i32** %11, align 8
  %131 = bitcast i32* %130 to i8*
  %132 = load %struct.TYPE_20__*, %struct.TYPE_20__** %16, align 8
  %133 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %132, i32 0, i32 0
  %134 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %133, i32 0, i32 3
  store i8* %131, i8** %134, align 8
  %135 = load i32, i32* %14, align 4
  %136 = call i32 @_CPU_ISR_Restore(i32 %135)
  %137 = load %struct.TYPE_18__*, %struct.TYPE_18__** %8, align 8
  %138 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %137, i32 0, i32 1
  %139 = load i32, i32* %13, align 4
  %140 = call i32 @__lwp_threadqueue_enqueue(i32* %138, i32 %139)
  %141 = load i32, i32* @LWP_MQ_STATUS_SUCCESSFUL, align 4
  store i32 %141, i32* %7, align 4
  br label %142

142:                                              ; preds = %113, %105, %67, %62
  %143 = load i32, i32* %7, align 4
  ret i32 %143
}

declare dso_local i32 @_CPU_ISR_Disable(i32) #1

declare dso_local %struct.TYPE_19__* @__lwpmq_get_pendingmsg(%struct.TYPE_18__*) #1

declare dso_local i32 @_CPU_ISR_Restore(i32) #1

declare dso_local i32 @__lwpmq_buffer_copy(i8*, i8*, i32) #1

declare dso_local %struct.TYPE_20__* @__lwp_threadqueue_dequeue(i32*) #1

declare dso_local i32 @__lwpmq_free_msg(%struct.TYPE_18__*, %struct.TYPE_19__*) #1

declare dso_local i32 @__lwpmq_msg_insert(%struct.TYPE_18__*, %struct.TYPE_19__*, i32) #1

declare dso_local i32 @__lwp_threadqueue_csenter(i32*) #1

declare dso_local i32 @__lwp_threadqueue_enqueue(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
